Make it not blue and green, fix code + output alignment

--- a/src/styles/beginning-javascript.less
+++ b/src/styles/beginning-javascript.less
@@ -15,13 +15,17 @@ pre .hljs {
 .lesson-panel {
   float:       left;
   width:       30%;
-  background:  lightblue;
+  background:  #eee;
+  border-right: 3px solid black;
+  padding:     0.5rem;
+  box-sizing:  border-box;
 }
 
 .work-panel {
   float:  right;
   width:  70%;
-  background:  lightgreen;
+  background: #eee;
+  box-sizing:  border-box;
 }
 
 html, body {
@@ -48,6 +52,9 @@ a {
   height:  50%;
   width:   50%;
   float:   left;
+  box-sizing:  border-box;
+  overflow: hidden;
+  scroll: auto;
 
   .cm-s-default {
     height: 100%;
@@ -62,16 +69,17 @@ a {
   padding:        4px 0 0;
   overflow:       scroll;
   float:          right;
-  font-size:      13px;
-  line-height:    13px;
+  font-size:      12px;
+  line-height:    12px;
   background:     white;
   color:          #555;
+  box-sizing:  border-box;
 }
 
 .worksheet-results__line {
   margin:   0;
   padding:  0;
-  height:   13px;
+  height:   12px;
 
   &.is-error {
     color: red;
@@ -83,8 +91,17 @@ a {
   height: 50%;
 
   clear: both;
-  overflow: scroll;
+  overflow: auto;
+  padding: 0.5rem;
 
+  box-sizing:  border-box;
+  z-index: 1;
+  position: relative;
+  border-top: 3px solid black;
+
+  pre {
+    margin: 0;
+  }
 }
 
 .lesson__count {
@@ -99,7 +116,7 @@ a {
 
 .lesson-steps {
   list-style:  none;
-  padding:     0.5rem;
+  padding:     0;
 }
 
 
